@@ -6,6 +6,10 @@ To see earlier changes please see HISTORY.txt.
 2.0 (unreleased)
 ----------------
 
+- Bug: Demangling user prefix could not deal with non-string user 
+  ids, which may appear in certain cases.
+  (https://bugs.launchpad.net/bugs/586931)
+
 - Bug: Added GenericSetup magic to fully provide the INode interface
   for the exporter and importer classes, making it easier to nest 
   within other importers.
